# fastapi_setup

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.local.yml  docker-compose.yml  junit.xml  pyproject.toml  requirements.txt  requirements_main.txt
alembic/: env.py
alembic/versions/: 2ab1986f3898_.py  2d3a519e036b_initial_db.py  618f8aae0805_initial_db.py  6764cf66f538_emai_schema.py  6e06b945272d_initial_db.py  9d8ceaa5dd7c_initial.py  d843404ca1d1_.py  e2476d2ab052_add_role.py
app/: main.py
app/api/: auth.py  deps.py  permissions.py  router.py  user.py
app/core/: config.py  database.py  email.py  limiter.py  logger.py  security.py
app/models/: __init__.py  user.py
app/schemas/: user.py
tests/: conftest.py
tests/api/: test_auth.py  test_main.py  test_users.py
tests/core/: test_security.py
