[project]
name = "fastapi-setup"
version = "0.1.0"
description = "A starter template for FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy",
    "asyncpg",
    "alembic",
    "pwdlib[argon2]",
    "pyjwt",
    "greenlet",
    "fastapi-mail",
    "slowapi",
]

[tool.fastapi]
entrypoint = "app.main:app"
